# yolov5_multiMCU_part2

./: CMakeLists.txt  README.md
include/: config.h  preprocess.h  trt_inference.h
src/: main.cpp  postprocess.cpp  preprocess.cu  trt_inference.cpp
